--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,57 +8,68 @@
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tb_MainAct"
+        android:id="@+id/toolbar_main_setting_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="#007BFF"
         android:minHeight="50dp"
         android:theme="@style/appBar"
-        app:layout_constraintBottom_toTopOf="@id/setting_main_tabLayout"
+        app:layout_constraintBottom_toTopOf="@id/tablayout_main_setting_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/setting_main_tabLayout"
+        android:id="@+id/tablayout_main_setting_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/setting_main_viewPager"
+        app:layout_constraintBottom_toTopOf="@id/view_main_setting_activity_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tb_MainAct"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main_setting_activity"
         app:tabIndicatorColor="#007BFF"
         app:tabSelectedTextColor="#007BFF"
         app:tabTextColor="@color/black" />
 
+    <View
+        android:id="@+id/view_main_setting_activity_divider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/lightgrey"
+        android:layout_marginHorizontal="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_main_setting_activity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/setting_main_viewPager"
+        android:id="@+id/viewpager2_main_setting_activity"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/textInputEditText"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
+        app:layout_constraintBottom_toTopOf="@id/edittext_main_setting_activity_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/setting_main_tabLayout" />
+        app:layout_constraintTop_toBottomOf="@id/view_main_setting_activity_divider" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/edittext_main_setting_activity_test"
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/view_edittext"
         android:gravity="center"
         android:hint="@string/textView_try"
-        android:inputType="textMultiLine|text"
-        android:padding="2dp"
         android:imeOptions="actionDone"
+        android:inputType="textMultiLine"
+        android:padding="2dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/setting_main_viewPager" />
+        app:layout_constraintTop_toBottomOf="@id/viewpager2_main_setting_activity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
