--- a/app/src/main/res/layout/fragment_setting_themes.xml
+++ b/app/src/main/res/layout/fragment_setting_themes.xml
@@ -17,8 +17,7 @@
         <LinearLayout
             android:id="@+id/setting_font_linearlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/setting_default_font_color"
