--- a/app/src/main/res/layout/fragment_setting_details.xml
+++ b/app/src/main/res/layout/fragment_setting_details.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="mFragment"
-            type="com.sb.fittingKeyboard.keyboardSettings.SettingDetailFragment" />
+            type="com.sb.fittingKeyboard.com.sb.fittingKeyboard.keyboardSettings.ui.FragmentSettingDetails" />
 
         <variable
             name="kbviewmodel"
